[project]
name = "warn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "pydantic[email]>=2.10.6",
    "playwright>=1.50.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
